Cuadruplos/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    PUNTO
    TEXTO

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     empty -> <empty>
Rule 2     E -> E2
Rule 3     E -> E2 MENOR E2 AUX_MENOR
Rule 4     E -> E2 MAYOR E2 AUX_MAYOR
Rule 5     E -> E2 MENOR_IGUAL E2 AUX_MENOR_IGUAL
Rule 6     E -> E2 MAYOR_IGUAL E2 AUX_MAYOR_IGUAL
Rule 7     E -> E2 IGUAL E2 AUX_IGUAL
Rule 8     E -> E2 DIFERENTE E2 AUX_DIFERENTE
Rule 9     AUX_MENOR -> empty
Rule 10    AUX_MAYOR -> empty
Rule 11    AUX_MENOR_IGUAL -> empty
Rule 12    AUX_MAYOR_IGUAL -> empty
Rule 13    AUX_IGUAL -> empty
Rule 14    AUX_DIFERENTE -> empty
Rule 15    E2 -> E3
Rule 16    E2 -> E2 OR E3 AUX_OR
Rule 17    E2 -> E2 MAS E3 AUX_MAS
Rule 18    E2 -> E2 MENOS E3 AUX_MENOS
Rule 19    AUX_OR -> empty
Rule 20    AUX_MAS -> empty
Rule 21    AUX_MENOS -> empty
Rule 22    E3 -> E4
Rule 23    E3 -> E3 AND E4 AUX_AND
Rule 24    E3 -> E3 POR E4 AUX_POR
Rule 25    E3 -> E3 ENTRE E4 AUX_ENTRE
Rule 26    E3 -> E3 MODULO E4 AUX_MODULO
Rule 27    AUX_AND -> empty
Rule 28    AUX_POR -> empty
Rule 29    AUX_ENTRE -> empty
Rule 30    AUX_MODULO -> empty
Rule 31    E4 -> T
Rule 32    E4 -> NOT T AUX_NOT
Rule 33    AUX_NOT -> empty
Rule 34    T -> PARENTESIS_IZQUIERDO E PARENTESIS_DERECHO
Rule 35    T -> FUNCTION
Rule 36    T -> ID_COMPLETO
Rule 37    T -> VALOR_INT
Rule 38    T -> VALOR_FLOAT
Rule 39    ID_COMPLETO -> ID RANGOS
Rule 40    RANGOS -> empty
Rule 41    RANGOS -> CORCHETE_IZQUIERDO VALOR_INT CORCHETE_DERECHO RANGOS
Rule 42    V -> TIPO DOS_PUNTOS A PUNTO_COMA
Rule 43    V -> TIPO DOS_PUNTOS ID_COMPLETO PUNTO_COMA
Rule 44    TIPO -> INT
Rule 45    TIPO -> FLOAT
Rule 46    V_M -> empty
Rule 47    V_M -> V V_M
Rule 48    A -> ID_COMPLETO ASIGNACION VALOR_INT
Rule 49    A -> ID_COMPLETO ASIGNACION VALOR_FLOAT
Rule 50    A -> ID_COMPLETO ASIGNACION E
Rule 51    A -> ID_COMPLETO ASIGNACION ID_COMPLETO
Rule 52    A -> ID_COMPLETO ASIGNACION ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO
Rule 53    A -> ID_COMPLETO ASIGNACION INPUT PARENTESIS_IZQUIERDO PARENTESIS_DERECHO
Rule 54    EST -> empty
Rule 55    EST -> LOOP_ EST
Rule 56    EST -> IF_ EST
Rule 57    EST -> A PUNTO_COMA EST
Rule 58    EST -> PROCEDURE PUNTO_COMA EST
Rule 59    EST -> FUNCTION PUNTO_COMA EST
Rule 60    EST -> PRINT PARENTESIS_IZQUIERDO COMILLAS COMILLAS PARENTESIS_DERECHO PUNTO_COMA EST
Rule 61    EST -> INPUT PARENTESIS_IZQUIERDO PARENTESIS_DERECHO PUNTO_COMA EST
Rule 62    EST -> ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO PUNTO_COMA EST
Rule 63    LOOP_ -> DO_WHILE
Rule 64    LOOP_ -> WHILE_
Rule 65    LOOP_ -> FOR_
Rule 66    DO_WHILE -> DO WHILE E DOS_PUNTOS EST END LOOP PUNTO_COMA
Rule 67    WHILE_ -> WHILE E DOS_PUNTOS EST END LOOP PUNTO_COMA
Rule 68    FOR_ -> FOR A PUNTO_COMA E PUNTO_COMA A DOS_PUNTOS EST END LOOP PUNTO_COMA
Rule 69    IF_ -> IF E DOS_PUNTOS EST ELSIF_
Rule 70    ELSIF_ -> END IF PUNTO_COMA
Rule 71    ELSIF_ -> ELSE DOS_PUNTOS EST END IF PUNTO_COMA
Rule 72    ELSIF_ -> ELSIF E DOS_PUNTOS EST ELSIF_
Rule 73    P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
Rule 74    P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
Rule 75    F -> TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
Rule 76    MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
Rule 77    MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
Rule 78    PROGRAMA -> MP PROGRAMA_H
Rule 79    PROGRAMA_H -> empty
Rule 80    PROGRAMA_H -> P PROGRAMA_H
Rule 81    PROGRAMA_H -> F PROGRAMA_H

Terminals, with rules where they appear

AND                  : 23
ASIGNACION           : 48 49 50 51 52 53
BEGIN                : 73 74 75 76 77
COMILLAS             : 60 60
CORCHETE_DERECHO     : 41
CORCHETE_IZQUIERDO   : 41
DIFERENTE            : 8
DO                   : 66
DOS_PUNTOS           : 42 43 66 67 68 69 71 72 73 74 75 76 77
ELSE                 : 71
ELSIF                : 72
END                  : 66 67 68 70 71 73 74 75 76 77
ENTRE                : 25
FLOAT                : 45
FOR                  : 68
FUNCTION             : 35 59 75
ID                   : 39 52 62 73 74 75 75
IF                   : 69 70 71
IGUAL                : 7
INPUT                : 53 61
INT                  : 44
LOOP                 : 66 67 68
MAIN                 : 76 77
MAS                  : 17
MAYOR                : 4
MAYOR_IGUAL          : 6
MENOR                : 3
MENOR_IGUAL          : 5
MENOS                : 18
MODULO               : 26
NOT                  : 32
OR                   : 16
PARENTESIS_DERECHO   : 34 52 53 60 61 62 73 74 75 76 77
PARENTESIS_IZQUIERDO : 34 52 53 60 61 62 73 74 75 76 77
POR                  : 24
PRINT                : 60
PROCEDURE            : 58 73 73 74 74 76 76 77 77
PUNTO                : 
PUNTO_COMA           : 42 43 57 58 59 60 61 62 66 67 68 68 68 70 71 73 73 74 74 74 75 75 75 76 76 77 77 77
RETURN               : 74 75 77
TEXTO                : 
VALOR_FLOAT          : 38 49
VALOR_INT            : 37 41 48
WHILE                : 66 67
error                : 

Nonterminals, with rules where they appear

A                    : 42 57 68 68
AUX_AND              : 23
AUX_DIFERENTE        : 8
AUX_ENTRE            : 25
AUX_IGUAL            : 7
AUX_MAS              : 17
AUX_MAYOR            : 4
AUX_MAYOR_IGUAL      : 6
AUX_MENOR            : 3
AUX_MENOR_IGUAL      : 5
AUX_MENOS            : 18
AUX_MODULO           : 26
AUX_NOT              : 32
AUX_OR               : 16
AUX_POR              : 24
DO_WHILE             : 63
E                    : 34 50 66 67 68 69 72
E2                   : 2 3 3 4 4 5 5 6 6 7 7 8 8 16 17 18
E3                   : 15 16 17 18 23 24 25 26
E4                   : 22 23 24 25 26
ELSIF_               : 69 72
EST                  : 55 56 57 58 59 60 61 62 66 67 68 69 71 72 73 74 75 76 77
F                    : 81
FOR_                 : 65
ID_COMPLETO          : 36 43 48 49 50 51 51 52 53
IF_                  : 56
LOOP_                : 55
MP                   : 78
P                    : 80
PROGRAMA             : 0
PROGRAMA_H           : 78 80 81
RANGOS               : 39 41
T                    : 31 32
TIPO                 : 42 43 75
V                    : 47
V_M                  : 47 73 74 75 76 77
WHILE_               : 64
empty                : 9 10 11 12 13 14 19 20 21 27 28 29 30 33 40 46 54 79

Parsing method: LALR

state 0

    (0) S' -> . PROGRAMA
    (78) PROGRAMA -> . MP PROGRAMA_H
    (76) MP -> . PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (77) MP -> . PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PROCEDURE       shift and go to state 3

    PROGRAMA                       shift and go to state 1
    MP                             shift and go to state 2

state 1

    (0) S' -> PROGRAMA .



state 2

    (78) PROGRAMA -> MP . PROGRAMA_H
    (79) PROGRAMA_H -> . empty
    (80) PROGRAMA_H -> . P PROGRAMA_H
    (81) PROGRAMA_H -> . F PROGRAMA_H
    (1) empty -> .
    (73) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (74) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (75) F -> . TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
    (44) TIPO -> . INT
    (45) TIPO -> . FLOAT

    $end            reduce using rule 1 (empty -> .)
    PROCEDURE       shift and go to state 8
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    PROGRAMA_H                     shift and go to state 4
    empty                          shift and go to state 5
    P                              shift and go to state 6
    F                              shift and go to state 7
    TIPO                           shift and go to state 9

state 3

    (76) MP -> PROCEDURE . MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (77) MP -> PROCEDURE . MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    MAIN            shift and go to state 12


state 4

    (78) PROGRAMA -> MP PROGRAMA_H .

    $end            reduce using rule 78 (PROGRAMA -> MP PROGRAMA_H .)


state 5

    (79) PROGRAMA_H -> empty .

    $end            reduce using rule 79 (PROGRAMA_H -> empty .)


state 6

    (80) PROGRAMA_H -> P . PROGRAMA_H
    (79) PROGRAMA_H -> . empty
    (80) PROGRAMA_H -> . P PROGRAMA_H
    (81) PROGRAMA_H -> . F PROGRAMA_H
    (1) empty -> .
    (73) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (74) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (75) F -> . TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
    (44) TIPO -> . INT
    (45) TIPO -> . FLOAT

    $end            reduce using rule 1 (empty -> .)
    PROCEDURE       shift and go to state 8
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    P                              shift and go to state 6
    PROGRAMA_H                     shift and go to state 13
    empty                          shift and go to state 5
    F                              shift and go to state 7
    TIPO                           shift and go to state 9

state 7

    (81) PROGRAMA_H -> F . PROGRAMA_H
    (79) PROGRAMA_H -> . empty
    (80) PROGRAMA_H -> . P PROGRAMA_H
    (81) PROGRAMA_H -> . F PROGRAMA_H
    (1) empty -> .
    (73) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (74) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (75) F -> . TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
    (44) TIPO -> . INT
    (45) TIPO -> . FLOAT

    $end            reduce using rule 1 (empty -> .)
    PROCEDURE       shift and go to state 8
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    F                              shift and go to state 7
    PROGRAMA_H                     shift and go to state 14
    empty                          shift and go to state 5
    P                              shift and go to state 6
    TIPO                           shift and go to state 9

state 8

    (73) P -> PROCEDURE . ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (74) P -> PROCEDURE . ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    ID              shift and go to state 15


state 9

    (75) F -> TIPO . ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    ID              shift and go to state 16


state 10

    (44) TIPO -> INT .

    ID              reduce using rule 44 (TIPO -> INT .)
    DOS_PUNTOS      reduce using rule 44 (TIPO -> INT .)


state 11

    (45) TIPO -> FLOAT .

    ID              reduce using rule 45 (TIPO -> FLOAT .)
    DOS_PUNTOS      reduce using rule 45 (TIPO -> FLOAT .)


state 12
